--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <p>This is new repos</p>
+    <p>This is new repos (dropdown)</p>
 </body>
 </html>
